--- a/Pathwinder.vcxproj.filters
+++ b/Pathwinder.vcxproj.filters
@@ -41,25 +41,25 @@
     <ClInclude Include="Resources\Pathwinder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Pathwinder\Globals.h">
+    <ClInclude Include="Include\Pathwinder\Internal\Globals.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Pathwinder\Message.h">
+    <ClInclude Include="Include\Pathwinder\Internal\Message.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Pathwinder\TemporaryBuffer.h">
+    <ClInclude Include="Include\Pathwinder\Internal\TemporaryBuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Pathwinder\Strings.h">
+    <ClInclude Include="Include\Pathwinder\Internal\Strings.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Pathwinder\ValueOrError.h">
+    <ClInclude Include="Include\Pathwinder\Internal\ValueOrError.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Pathwinder\Configuration.h">
+    <ClInclude Include="Include\Pathwinder\Internal\Configuration.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Pathwinder\PathwinderConfigReader.h">
+    <ClInclude Include="Include\Pathwinder\Internal\PathwinderConfigReader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
