Debug visualization support for internal infrastructure types.

--- a/PathwinderTest.vcxproj
+++ b/PathwinderTest.vcxproj
@@ -230,6 +230,10 @@
   <ItemGroup>
     <ResourceCompile Include="Resources\Pathwinder.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="Debug\TemporaryBuffer.natvis" />
+    <Natvis Include="Debug\ValueOrError.natvis" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
