--- a/PathwinderTest.vcxproj
+++ b/PathwinderTest.vcxproj
@@ -231,8 +231,8 @@
     <ResourceCompile Include="Resources\Pathwinder.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Natvis Include="Debug\TemporaryBuffer.natvis" />
-    <Natvis Include="Debug\ValueOrError.natvis" />
+    <Natvis Include="Include\Pathwinder\Internal\TemporaryBuffer.natvis" />
+    <Natvis Include="Include\Pathwinder\Internal\ValueOrError.natvis" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
