--- a/Pathwinder.vcxproj
+++ b/Pathwinder.vcxproj
@@ -212,6 +212,7 @@
   <ItemGroup>
     <ClCompile Include="Source\Configuration.cpp" />
     <ClCompile Include="Source\FilesystemRule.cpp" />
+    <ClCompile Include="Source\FilesystemRuleRegistry.cpp" />
     <ClCompile Include="Source\Globals.cpp" />
     <ClCompile Include="Source\HookModuleMain.cpp" />
     <ClCompile Include="Source\Message.cpp" />
@@ -223,6 +224,7 @@
   <ItemGroup>
     <ClInclude Include="Include\Pathwinder\Internal\Configuration.h" />
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemRule.h" />
+    <ClInclude Include="Include\Pathwinder\Internal\FilesystemRuleRegistry.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Globals.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Message.h" />
     <ClInclude Include="Include\Pathwinder\Internal\PathwinderConfigReader.h" />
