Implement deep directory hierarchy redirection for filesystem rules and add associated tests.

--- a/Pathwinder.vcxproj
+++ b/Pathwinder.vcxproj
@@ -118,8 +118,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source\Configuration.cpp" />
+    <ClCompile Include="Source\FilesystemDirector.cpp" />
     <ClCompile Include="Source\FilesystemRule.cpp" />
-    <ClCompile Include="Source\FilesystemRuleRegistry.cpp" />
     <ClCompile Include="Source\Globals.cpp" />
     <ClCompile Include="Source\HookModuleMain.cpp" />
     <ClCompile Include="Source\Message.cpp" />
@@ -130,8 +130,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\Pathwinder\Internal\Configuration.h" />
+    <ClInclude Include="Include\Pathwinder\Internal\FilesystemDirector.h" />
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemRule.h" />
-    <ClInclude Include="Include\Pathwinder\Internal\FilesystemRuleRegistry.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Globals.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Message.h" />
     <ClInclude Include="Include\Pathwinder\Internal\PathwinderConfigReader.h" />
