--- a/PathwinderTest.vcxproj
+++ b/PathwinderTest.vcxproj
@@ -114,13 +114,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source\FilesystemRule.cpp" />
-    <ClCompile Include="Source\FilesystemRuleRegistry.cpp" />
+    <ClCompile Include="Source\FilesystemDirector.cpp" />
     <ClCompile Include="Source\Globals.cpp" />
     <ClCompile Include="Source\Message.cpp" />
     <ClCompile Include="Source\Resolver.cpp" />
     <ClCompile Include="Source\Strings.cpp" />
     <ClCompile Include="Source\TemporaryBuffer.cpp" />
-    <ClCompile Include="Source\Test\Case\FilesystemRuleRegistryTest.cpp" />
+    <ClCompile Include="Source\Test\Case\FilesystemDirectorTest.cpp" />
     <ClCompile Include="Source\Test\Case\FilesystemRuleTest.cpp" />
     <ClCompile Include="Source\Test\Case\ResolverTest.cpp" />
     <ClCompile Include="Source\Test\Case\StringsTest.cpp" />
@@ -130,7 +130,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemRule.h" />
-    <ClInclude Include="Include\Pathwinder\Internal\FilesystemRuleRegistry.h" />
+    <ClInclude Include="Include\Pathwinder\Internal\FilesystemDirector.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Globals.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Message.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Resolver.h" />
