--- a/PathwinderTest.vcxproj.filters
+++ b/PathwinderTest.vcxproj.filters
@@ -51,10 +51,10 @@
     <ClCompile Include="Source\FilesystemRule.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source\FilesystemRuleRegistry.cpp">
+    <ClCompile Include="Source\FilesystemDirector.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Test\Case\FilesystemRuleRegistryTest.cpp">
+    <ClCompile Include="Source\Test\Case\FilesystemDirectorTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -92,7 +92,7 @@
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemRule.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Pathwinder\Internal\FilesystemRuleRegistry.h">
+    <ClInclude Include="Include\Pathwinder\Internal\FilesystemDirector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
